Menu z-index fix

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -142,6 +142,7 @@ header {
 	top: 0;
 	left: 0;
 	padding: 0.9rem 1rem;
+	z-index: 100;
 }
 @media (max-width: 780px) {
 	header {
